Make UA dblclick events composed events

This is a bug fix.

BUG=662401

Review-Url: https://codereview.chromium.org/2490883002
Cr-Commit-Position: refs/heads/master@{#431172}

Former-commit-id: 0eec66d250f63a4802bf17b0d0b84a8ddeda91f6