third_party/WebKit/Source/core/events/Event.h
@@ -265,6 +265,10 @@ class CORE_EXPORT Event : public GarbageCollectedFinalized<Event>,
   virtual void receivedTarget();
 
   void setCanBubble(bool bubble) { m_canBubble = bubble; }
+  void setComposed(bool composed) {
+    DCHECK(!isBeingDispatched());
+    m_composed = composed;
+  }
 
   PassiveMode handlingPassive() const { return m_handlingPassive; }
 
